chore(orchestrator): restore planning files deleted by out-of-scope agent reset